[package]
name = "pathfinder2"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_checksum = "0.1.2"
json = "^0.12.4"
num-bigint = "^0.4.3"
serde = { version = "1.0.149", features = ["serde_derive"] }
serde_json = "1.0.89"
regex = "1.8.1"
plotters = "0.3.3"
petgraph = "0.6.0"
gif = "0.11"
image = "0.23"
imageproc = "0.22"
rusttype = "0.9.2"
chrono = "0.4"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
num-traits = "0.2"